base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: junhoservice-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: junhoservice
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: junhoservice
    spec:
      containers:
        - image: simta1/dockerstudyimagename
          imagePullPolicy: Always
          name: pdf-module
          ports:
            - containerPort: 80
