base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junhoservice
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: junhoservice
